<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ID ko nav_dashboard se badal kar nav_home kar diya gaya hai -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_camera_sidebar"
        android:title="@string/Dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_status_gallery_merge"
        android:title="@string/gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_download"
        android:icon="@drawable/ic_wa_download"
        android:title="@string/downloadss"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>