<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/luxury_card_bg"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Top Luxury Icon -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_luxury_update"
            app:tint="#D4AF37" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:letterSpacing="0.2"
            android:text="@string/what_s_new"
            android:textColor="#D4AF37"
            android:textSize="22sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_language_selector"
                app:tint="#BF953F" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/icon5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multi_language_support"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/change_app_language_as_you_prefer"
                    android:textColor="#9E9E9E"
                    android:textSize="11sp" />
            </LinearLayout>

        </RelativeLayout>

        <CheckBox
            android:id="@+id/cb_dont_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="#D4AF37"
            android:text="@string/don_t_show_for_this_version"
            android:textColor="#666666"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_explore"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/golden_button_full"
            android:text="@string/experience_now"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>